--- a/src/app/logons/logons.component.html
+++ b/src/app/logons/logons.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6">
     <h2 class="text-center">Create Account</h2>
-    <form novalidate  [formGroup]="addForm" (ngSubmit)="createUser()">
+    <form [formGroup]="addForm">
         <div class="form-group">
             <label for="name">name</label>
             <input type="text" formControlName="name" placeholder="name" name="name" class="form-control">
@@ -15,7 +15,6 @@
             <input type="password" formControlName="password" placeholder="password" name="password"
                 class="form-control">
         </div>
-
-        <button class="btn btn-success float-right" [disabled]="addForm.invalid">Submit</button>
+        <button class="btn btn-success float-right" (click)="createUser()" [disabled]="addForm.invalid">Submit</button>
     </form>
 </div>
