--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div class="col-md-6" *ngIf="getuserdatas">
     <h2 class="text-center">Invoice</h2>
     <div class="container">
         <div *ngFor="let userdetails of getname">
