--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,10 @@
         </div>
       </div>
 </router-outlet>
+<div class="main" *ngIf="loading">
+  <div class="content">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+</div>
